Source/WebCore/platform/network/soup/ResourceResponseSoup.cpp
@@ -96,8 +96,13 @@ CertificateInfo ResourceResponse::platformCertificateInfo() const
 
 String ResourceResponse::platformSuggestedFilename() const
 {
-    SoupMessageHeaders* soupHeaders = soup_message_headers_new(SOUP_MESSAGE_HEADERS_RESPONSE);
     String contentDisposition(httpHeaderField(HTTPHeaderName::ContentDisposition));
+    if (contentDisposition.isEmpty())
+        return String();
+
+    if (contentDisposition.is8Bit())
+        contentDisposition = String::fromUTF8WithLatin1Fallback(contentDisposition.characters8(), contentDisposition.length());
+    SoupMessageHeaders* soupHeaders = soup_message_headers_new(SOUP_MESSAGE_HEADERS_RESPONSE);
     soup_message_headers_append(soupHeaders, "Content-Disposition", contentDisposition.utf8().data());
     GRefPtr<GHashTable> params;
     soup_message_headers_get_content_disposition(soupHeaders, nullptr, &params.outPtr());
